# rs_t

./: Cargo.toml  README.md
FDeleter/: Cargo.toml  README.md
FDeleter/src/: main.rs
FireNote/: Cargo.toml
FireNote/src/: main.rs
