#[package]
#name = "rss_ttt"
#version = "0.1.0"
#edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "FDeleter",
  "FireNote",
]
[workspace.dependencies]

slab = "0.4.3"
futures = { version = "0.3"}

base64 = "0.21.0"
sha1 = "0.10.5"
tokio = { version = "1.25.0", features = ["full"] }
httparse = "1.8.0"


ws = "0.9.2"

regex = "1.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

libc = "0.2"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
lazy_static = "1.4"
mio = {version="0.8.8", features = ["os-poll", "net", "os-ext"] }
env_logger = "0.10.0"

mio-extras = "2.0.6"

diesel = { version = "2.1.0", features = ["sqlite", "postgres", "chrono", "r2d2"] }
chrono = { version = "0.4.26", features = ["serde"] }


firebase-rs = "2.0.8"
fireauth = "0.1.5"
firestore-db-and-auth = "0.6.1"
