[package]
name = "FireNote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

regex = "1.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


env_logger = "0.10.0"


diesel = { version = "2.1.0", features = ["sqlite", "postgres", "chrono", "r2d2"] }


firebase-rs = "2.0.8"
fireauth = "0.1.5"
firestore-db-and-auth = "0.6.1"




